# telegram-signals-collector

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
app/: __init__.py  checker.py  config.py  db.py  llm.py  log.py  login.py  models.py  processor.py  regex_gate.py  schemas.py  telegram_client.py
app/alembic/: env.py
app/alembic/versions/: c6a129950e58_init.py
app/api/: routes.py  schemas.py  server.py
app/service/: query.py
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  api.ts  index.css
web/src/components/: Header.tsx  ModeToggle.tsx  Sidebar.tsx  SignalList.tsx  StatsPage.tsx
