[tool.poetry]
name = "telegram-signal-collector"
version = "0.3.0"
description = "Real-time Telegram trading signal collector + FastAPI + React viewer"
authors = ["Phizilion <Phizilion@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
kurigram = "^2.0"
tgcrypto = "^1.2.5"
pydantic = "^2.7"
pydantic-settings = "^2.2"
SQLAlchemy = "^2.0"
alembic = "^1.16.4"
aiosqlite = "^0.20.0"
langchain-core = "^0.3.74"
langchain-openai = "^0.3.29"
openai = "^1.40.0"
python-dotenv = "^1.0.1"
fastapi = "^0.112.0"
uvicorn = {version = "^0.30.0", extras = ["standard"]}
python_dotenv = "^1.1.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.5"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"